--- a/q/273745.html
+++ b/q/273745.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>056</td><td>Haskell + hgl</td><td>240624T215634Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273781#273781">corvus_1</a></td></tr>
-<tr d-ix="1"><td>028</td><td>MATLAB</td><td>240625T101259Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273795#273795">Wolfie</a></td></tr>
-<tr d-ix="2"><td>053</td><td>Haskell + hgl</td><td>240624T230341Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273782#273782">corvus_1</a></td></tr>
+<tr d-ix="0"><td>045</td><td>Haskell</td><td>240624T230341Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273782#273782">corvus_1</a></td></tr>
+<tr d-ix="1"><td>056</td><td>Haskell + hgl</td><td>240624T215634Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273781#273781">corvus_1</a></td></tr>
+<tr d-ix="2"><td>028</td><td>MATLAB</td><td>240625T101259Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273795#273795">Wolfie</a></td></tr>
 <tr d-ix="3"><td>053</td><td>R</td><td>240624T072452Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273768#273768">Ric</a></td></tr>
 <tr d-ix="4"><td>025</td><td>05AB1E</td><td>240624T102025Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273771#273771">Kevin Cr</a></td></tr>
 <tr d-ix="5"><td>053</td><td>JavaScript ES6</td><td>240622T170914Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273748#273748">Arnauld</a></td></tr>
@@ -40,7 +40,22 @@
 <tr d-ix="11"><td>133</td><td>Python 3.8 prerelease</td><td>240622T184410Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273750#273750">squarero</a></td></tr>
 <tr d-ix="12"><td>011</td><td>Jelly</td><td>240622T172800Z</td><td><a href="https://codegolf.stackexchange.com/questions/273745/nan-is-not-equal-to-nan/273749#273749">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + hgl, 56 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>53</s> 45 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>xM cnT&lt;(wx&lt;l*^jn eqo&lt;m(gk$(/)&lt;ν&lt;*ʃ&quot;/&quot;*^ν))
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=jVO9btswEB666SkORAbREUtRP64QyF1SFOgQwEAyFFCcQLXoWI0suRaNeg-69Q3aAFmKog-RF-iQ3R37JKVIRqpTBY2W73T3fXcfjuSX7_O0vuRF8SNB5O3heIwm28N8saxWAl6lIn3-uiqy9F3BwZ5Vq6NzbJniuA1WvFhn3LYpdlY8zbBlzUan39ZiRqIt2RzBtDyJ7Y-buBicvS-Bf6jihX1xuSf58d1tPPh5hSganN3dYqxFv55tBa_FNK15DQcHkNjJsVjl5cXEgTelwBOrK48gscBOEKM-cgAFlHkNepQFDfrUYzrvRUjKfewYukr3gk-Dhho8gdqApIa9VNKHOx6MVeWU-HSoMKCRwpAy9296b7ue9mHHV_2JGbA7zpC9J5H_8cK0R7nlodmy4oU0cJXapZHbsxjvfsHmTJgWKSesdyuMqobe0DdB5L-gO1ZcXXgUJNVtW-seGkzHQENIHxjuoRKTJR59eDLe_zywjhuaHuxxtocnYFmLNC_lBVfPDrorvwendl4u1-LcAb5Z8qngGQbyErLKAvkVXEjNuswaLWhmWxB8I2S-npsC7O8DAiLVqAllXktlbOcz80NH7SAQc16CtPr7-nOXvNe2CV7UXLG-fkJYDV8eq9n6hd_caPwD" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Using the approach of <a href="https://codegolf.stackexchange.com/a/273763">Luis' MATL answer</a>.
+Semi-ungolfed Pseudocode:</p>
+<pre class="lang-haskell prettyprint-override"><code>parseFraction = gk $ (/) &lt; ν &lt;* ʃ&quot;/&quot; &lt;*&gt; read
+
+-- elementwise equality
+eqo :: Eq a =&gt; [a] -&gt; [a] -&gt; [Bool]
+eqo = liftA2 (==)
+
+f = maxBy count &lt; splitAt length &lt; (join eqo &lt; m parseFraction)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + hgl, 56 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>liF(p 0)(l&lt;he&lt;bg)(mF$jn nq)&lt;m(h&lt;m read&lt;za&quot;/&quot;)
 h[p,q]=p/q
 </code></pre>
@@ -57,7 +72,7 @@ f a =
  in liF (const 0) (length.head.toBag) (all $ join (/=)) listOfFloats
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>MATLAB, 28 bytes</h1>
+<div id="pu2" class="pu"><h1>MATLAB, 28 bytes</h1>
 <pre><code>x=num2str(x);max(sum(x==x'))
 </code></pre>
 <h2>How it works</h2>
@@ -69,32 +84,6 @@ f a =
 <li><code>max</code> to get the desired output</li>
 </ul>
 <p>The question doesn't (currently) stipulate the input must be a string, if the input were an array of values <code>[1/3,4/12,2/14,...]</code> then the <code>num2str</code> isn't needed and this drops to <strong>15 bytes</strong>.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + hgl, 53 bytes</h1>
-<pre class="lang-haskell prettyprint-override"><code>mx&lt;m cnT&lt;(wx**l)(jn eqo&lt;m(h&lt;m read&lt;za&quot;/&quot;))
-h[p,q]=p/q
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=jVNNb9QwED1wy68YWRziNsGxkyyrapdLERIHpJXKASmNqrDxkkC-NvGKFffe-AeA1AtC_KTlyC_Bsd2ELaloLm8y897M09j-8iNLug-8KH5GyH1zvlqh-HCel03dCnieiOTJi7pIk7cFB3tTt6-usGWKqyFoebFLuW0T7LQ8SbFlbZaX33di484PYblflLCuXi_sj_uTkwLb7yvg23pR2pks9PzFpwQRhLGVRY2zjZcN2Wrxr0cHwTuxTjrewdkZRHZ0Idq8ehc78LISOLbG8hIiC-wIUeIjB1BAKOuRERr06BNGdZ7NkZT72DF0lZ4EnwQ9NXgAtQdJDSep7hQeeTBWlVPXJzOFAZkrDAn1_qZPtptoH4581d81A47HGTJ7EPkfL1R7lFuemS0rXkgCT6k9MvcmFsNuF2zOhGqRckInt0KJashmvgnm_lNyZMXThXtBUr2hte6hwXQMNITkjuEJqmuyLiN3T4b9zwMduaHpQe9nMxyDZZVJXskLrp4fjFf-MVzaedXsxJUDfN_wteApBvcZpLUF8iu4kJpdlfZa0MyhIPheyHyXmQKcngICV6pRH8q8lsrYzjfmhyyHQSAyXoG0-vvb5zF5qx0SvOi4Yn29RlgNby7UbP3Cb240_gE" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Using the approach of <a href="https://codegolf.stackexchange.com/a/273763">Luis' MATL answer</a>.
-Semi-ungolfed:</p>
-<pre class="lang-haskell prettyprint-override"><code>h :: [Float] -&gt; Float
-h [p,q] = p/q
-
--- how this works ???
-byChunkLengths :: ([a] -&gt; [b]) -&gt; [a] -&gt; [[b]]
-byChunkLengths = liftA2 chunksOn length
-
--- elementwise equality
-eqo :: Eq a =&gt; [a] -&gt; [a] -&gt; [Bool]
-eqo = liftA2 (==)
-
-f = let
- listOfFloats = map (h . map (read @Int) . splitOn &quot;/&quot;)
- -- `join` for the Monad instance of (-&gt;) gives an argument twice to a function
- matrix = join eqo listOfFloats
- in maximum (map countTrues matrix)
-<span class="math-container">```</span>
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://r-project.org/" rel="nofollow noreferrer">R</a>, 53 bytes (as a script)</h1>
 <pre><code>max(0,table(sapply(parse(,,commandArgs()[-1]),eval)))
