--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240716T234026Z
+"   /golfscore                                      20240717T011303Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/144118.html">Longest hypercube path                          : 0144118</a>
 <a href="q/273783.html">Binary Slashes Display                          : 0273783</a>
 <a href="q/235964.html">Implement the hyperfactorial                    : 0235964</a>
 <a href="q/74408.html">Find the haystack in the needles                : 0074408</a>
