--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240717T014215Z
+"   /golfscore                                      20240717T015205Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/229667.html">A Cat’s Game to Claim                           : 0229667</a>
 <a href="q/144118.html">Longest hypercube path                          : 0144118</a>
 <a href="q/273783.html">Binary Slashes Display                          : 0273783</a>
