--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240717T021413Z
+"   /golfscore                                      20240717T022309Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/172488.html">A sorcerers spellbook                           : 0172488</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/229667.html">A Cat’s Game to Claim                           : 0229667</a>
 <a href="q/144118.html">Longest hypercube path                          : 0144118</a>
