--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>251</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>248</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>077</td><td>C#</td><td>240711T125631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274080#274080">Mayube</a></td></tr>
 <tr d-ix="2"><td>006</td><td>K ngn/k</td><td>220401T190852Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/245872#245872">coltim</a></td></tr>
 <tr d-ix="3"><td>019</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
@@ -107,7 +107,7 @@
 <tr d-ix="78"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="79"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> </sup> 251 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> </sup> 248 bytes</h1>
 <pre><code>h;G;G;:a
 s/.\n/\n\n/g;x;s/\n.*//;tc
 :b;s/.*/&amp;\n&amp;/m;T
@@ -115,8 +115,8 @@ s/.\n/\n\n/g;x;s/\n.*//;tc
 G;x;g;s/\n(.)/\1/g
 T;s/\n..+\n/&amp;/;ta
 x;s/\n.*//;G
-T;s/#\n(#+).#(\n#*)#(.*)/\2\2\3\r\1/;h;ta
-s/[^\r]*//;y/\r/\n/;h;s/.*/#/
+T;s/#\n(#+)(\n#+)+#(.*)/\2\2\3\r\1/;h;ta
+s/[^\r]*//;y/\r/\n/;h;s//#/
 t;:d;s/.*/&amp;\n&amp;/m
 :;t;x;s/^#//;x;td
 s/\n?//g
