--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>248</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>240</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>077</td><td>C#</td><td>240711T125631Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274080#274080">Mayube</a></td></tr>
 <tr d-ix="2"><td>006</td><td>K ngn/k</td><td>220401T190852Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/245872#245872">coltim</a></td></tr>
 <tr d-ix="3"><td>019</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
@@ -107,7 +107,7 @@
 <tr d-ix="78"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="79"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> </sup> 248 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> </sup> 240 bytes</h1>
 <pre><code>h;G;G;:a
 s/.\n/\n\n/g;x;s/\n.*//;tc
 :b;s/.*/&amp;\n&amp;/m;T
@@ -115,15 +115,15 @@ s/.\n/\n\n/g;x;s/\n.*//;tc
 G;x;g;s/\n(.)/\1/g
 T;s/\n..+\n/&amp;/;ta
 x;s/\n.*//;G
-T;s/#\n(#+)(\n#+)+#(.*)/\2\2\3\r\1/;h;ta
-s/[^\r]*//;y/\r/\n/;h;s//#/
-t;:d;s/.*/&amp;\n&amp;/m
+T;s/#\n(#+).#(.#*)#(.*)/\2\2\3\r\1/;h;ta
+s/[^\r]*//;h;s/.*/#/
+t;:d;s/#+/&amp;\r&amp;/
 :;t;x;s/^#//;x;td
-s/\n?//g
-T;x;s/\n#//;x;t
+s/\r?//g
+T;x;s/\r#//;x;t
 </code></pre>
-<p><a href="https://tio.run/##VVDLbsIwELzvb6wUJUZ44wBtY0f0mB/gVoMEBIUeaqokB/j5puPQVlQr2V7Nw7Pbn5rRnlwvb2ZebiVhaekmplgsV0/PL6Xkv0@hXjiXksUNkZ@LtOPZ1Si7B6Z9EB9wtO4K2AetBNQj2QNaNIkPiXy4DdnjxNgx8KsbDlTjaidNqjPxBhE2dws9g2ECmz09mNYTzKDzLNOc@sAq41QriAvUwncwcecow2A7322j7Ca@g0UEpkAsNDjbPKYj64Z/4RqKv77KFOke4QcZbYzMUlV/y@LcrOOaMEWllTcpK51ptUYqjNCOORkqaEHLr8vn8H4J/TjvvgE" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~45 seconds)</a><br />
-<a href="https://tio.run/##XZDLbsIwEEX38xsjRUkQHjtAW2xEl/kBdjVI4RW6aKiSLEBVf73pdWirFFvyQ3fmzJ1pDvvOHlwjL2Y8X0vEUtJVTDaZzh4en@aif59CjbCWOYtrQ7wWKbuTy7FtAU35SnyFo3QXyL5SqSB0R3aLLz6RryJ5cyuyuz5iw9Avrt1Sjqvsc2KViDewsLoh1AjACJiCBtC8lxnhPEoUx77iNOFYpUjOsCe@BsSdQhoa2/h6HdKu4msggtAbYqHW2f3QHVnX/jO3p1D1WXpLNws/SgcHH0ZjfUoB2R6hFrJY/M2u0GYZpoamFir1Ji5Slah0CZPo6BisacwctQNFyIYZ8JDA9wQeEkooG43OOk2GMprQlGZf5/f29Vw13bj@Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50 seconds, longer but more efficient footer)</a></p>
+<p><a href="https://tio.run/##VZDNboMwEITv@xorITCKF0PSFhulR14gtzqRkhBBDyUVcEhfvnRM2qrVSv7R7Iw/73hpZntxo7yYVbmXiKWlDzF5sd48PD6Vkv0chUbhTEoWN4X@TKSdO1ej7BGa9r34HkvrbpB9r5Wg9Uz2hCsuke8jeXM7suel48DQb246UY2tXTyxTsQbIOzuETpFYISYI/0JrReZ0c5pojnWrBKsCt4cVfgBGa4LLvzr4Id9cHV3DBaanG1CQAqmIRKybvpH1MDmh2dZOJZ3h29ltoGTpap@J8SZ2YbZAL3SypuYlU602oIF3O2ckaGcClp/Xt@n12s/zqvhCw" rel="nofollow noreferrer">Try it online! (cases 0-4, ~45 seconds)</a><br />
+<a href="https://tio.run/##XZDNbsIwEITv@xqWImKE1@anbWxEj7wAtxokQyDpoaFycqCq@upNx6GtaGPJjjU7n2e3PZa9PbqWn8yk2HImuKI3NtPZfHF3/1Cw/vllalloLgS7LtVr5qqv3RrLBmjKN@wbbJW7QPaNkozSA9k9rrhkvsn4xW3IHoaKnYB@cd2e1jiqwTNSOXuDCJsrQo0BzIAJdANdD7JAuRjnSoyUkDl2Ce8Ua@YjGK5OLvS183GbXPU1hmDqnC0TYIxMMWOyrvuTqITNx0cecgzvxm@lh@vdaHwfHCDbE9TAy@XvwII2qzQqdLJU0ptRkCpXcoVoaOOUAmkMGuNIFLydGhe3BPGfIG4JFZSdRj@9JkNTmtGcFp/n1@753LT9JH4B" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~50 seconds, longer but more efficient footer)</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to and from decimal in header/footer.</p>
 <p>I'll come back and explain better later, but essentially, I make a loop that multiplies the first line of the PATTERN space by the first line of the HOLD space without killing the rest of the HOLD space. this allows me to store other loop variables and preliminary results on other lines in the HOLD space.</p>
 </div>
