--- a/q/58615.html
+++ b/q/58615.html
@@ -420,16 +420,37 @@
 <pre><code>≡(&amp;p◌⍥:±⧻.▽▽4=0◿3_5,&quot;FizzBuzz&quot;)+1⇡100
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__4omhKCZw4peM4o2lOsKx4qe7LuKWveKWvTQ9MOKXvzNfNSwiRml6ekJ1enoiKSsx4oehMTAwCg==" rel="nofollow noreferrer">Try it</a></p>
-<pre><code>≡(&amp;p◌⍥:±⧻.▽▽4=0◿3_5,&quot;FizzBuzz&quot;)+1⇡100­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏⁠⁪⁪⁠‎⁪⁡⁪⁠⁪⁢⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁡⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁡⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁢⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠⁪⁪⁠⁪⁪‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌­
-≡(                            )+1⇡100  # ‎⁡for each N from 1 to 100:
-             =0◿3_5,                   # is N divisible by? each of [3 5]
-           ▽4                          # ‎⁣keep 4 of each 0 or 1 from that
-          ▽         &quot;FizzBuzz&quot;         # ‎⁤use this as a filter for &quot;FizzBuzz&quot;
-       ±⧻.                             # ‎⁢⁡take the sign of the length. 0 if empty, 1 if not
-  &amp;p◌⍥:                                # ‎⁢⁢if 0 print N else print the string
-💎
+<pre class="lang-python prettyprint-override"><code>» 80          # this runs on each 1 to 100; consider the 80th run
+↪ 80
+80
+» ,&quot;FizzBuzz&quot;
+↪ ,&quot;FizzBuzz&quot;
+80
+&quot;FizzBuzz&quot;
+80
+» =0mod3_5     # check divisibility against 3 and 5
+↪ =0◿3_5
+[0 1]
+» keep4    di  # keep 4 of each
+↪ ▽4 ⊙∘
+&quot;FizzBuzz&quot;
+[0 0 0 0 1 1 1 1]
+» keep         # use this as a filtering mask on &quot;FizzBuzz&quot;
+↪ ▽
+&quot;Buzz&quot;
+» siglen.  di  # sign of length; 0 if empty, else 1
+↪ ±⧻. ⊙∘
+80
+&quot;Buzz&quot;
+1
+» rep:         # that many times, flip the two stack values
+↪ ⍥:
+&quot;Buzz&quot;
+80
+» pop      di  # remove the top value
+↪ ◌ ⊙∘
+&quot;Buzz&quot;
 </code></pre>
-<p>Explanation formatted with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a>, <s>145 138 134</s> 129 bytes</h1>
 <pre class="lang-fortran prettyprint-override"><code>character*8 s;do i=1,100;s=''
