--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240717T131743Z
+"   /golfscore                                      20240717T132432Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/174142.html">Japanese pitch accent numbers                   : 0174142</a>
 <a href="q/44946.html">Trucks in a parking lot                         : 0044946</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/229724.html">Consecutive Distance Rating                     : 0229724</a>
