--- a/q/64198.html
+++ b/q/64198.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>320</td><td>Fortran GFortran cpp</td><td>240618T173847Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/273699#273699">roblogic</a></td></tr>
+<tr d-ix="0"><td>312</td><td>Fortran GFortran cpp</td><td>240618T173847Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/273699#273699">roblogic</a></td></tr>
 <tr d-ix="1"><td>259</td><td>nroff</td><td>221019T124355Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/253440#253440">鳴神裁四点一号</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>Java</td><td>240314T211235Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/271818#271818">Rubinhoo</a></td></tr>
 <tr d-ix="3"><td>148</td><td>Uiua</td><td>240317T123414Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/271890#271890">noodle p</a></td></tr>
@@ -201,20 +201,20 @@
 <tr d-ix="172"><td>254</td><td>Matlab</td><td>151118T173034Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64215#64215">flawr</a></td></tr>
 <tr d-ix="173"><td>269</td><td>PHP</td><td>151118T160655Z</td><td><a href="https://codegolf.stackexchange.com/questions/64198/99-bottles-of-beer/64205#64205">undefine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a> <code>-cpp</code>, <s>409</s>... 320 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/fortran/" rel="nofollow noreferrer">Fortran (GFortran)</a> <code>-cpp</code>, <s>409</s>... 312 bytes</h1>
 <pre class="lang-sh prettyprint-override"><code>#define w' on the wall'
 #define p trim(x),trim(b)
 character(16)a,b,c,x
 a=' bottles of beer';b=a;c=' bottle of beer'
 do i=99,1,-1
-write(x,*)i;x=adjustl(x)
+write(x,'(i0)')i
 if(i&lt;99)print*,'Take one down, pass it around, ',p,w,'.',new_line(x)
 if(i&lt;2)b=c;print*,p,w,', ',p,'.'
 enddo
 print*,'Go to the store and buy some more, 99',a,w,'.'
 end
 </code></pre>
-<p><a href="https://tio.run/##PVDLboQwDLznKyz1ELIyleihEmI59wd6r5zXblpIUBIE/fnSFLqcPBqPZ0a2IeZIvr7ZA2zbkzbWeQMLh@Ah3wuiYeDswU@QoxurVeA@pWDqTpFUNrFqXgWhRIUro56DDDkPJkGwII2JvJM9depcnDzTAVzftthg3bAlumyqFS/CdWtP@nNOeSh5zNnKXdtWTNH5fEH@Tl/Fo1TSYfEIE6UELgPFMHuNwHHCBfkzR2@Wj6F0P01ehOxV9@@zqw55ETPjtQ7skfEWIIf9CymHaIC8Bjl/QwqjgbEwCG3LkY6kv@Nt@1F2oFvaajVNvw" rel="nofollow noreferrer" title="Fortran (GFortran) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##PU/LTsQwDLznKyxxSINcxHJAikrP/AB35Lx2I9okSrJq@XlKaNk9eTSe8YxdzDVT6M/uANv2YKzzwcLCIQaol4Zomji78Qlq9nO3CtynEkxfKJOuNnenV0GoUOPKaOSgYq2TLRAdKGszH9RIg74v7jwzEfwoJZ6wP7El@2q7FXnnnwUXnnnX@TcpRco@1EfkH/TVvK2KiUtASFQK@AqU4zUYBI4JF@RPHINdPqfWuZU9jrwINerh/86uOuRNzGwwJrJbxnuEGvfvS43ZAgUD6voNJc4W5sYgSMmRjqQ/87b9aDfRuWy9TukX" rel="nofollow noreferrer">Try it online!</a></p>
 <p>The <code>-cpp</code> option allows me to <code>#define</code> macros. Maybe one day Fortran will have stretchy strings but for now I have to use <code>trim()</code> everywhere.<br></p>
 </div>
 <div id="pu1" class="pu"><h1>nroff, 259 bytes</h1>
