--- a/q/274209.html
+++ b/q/274209.html
@@ -26,21 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
+<tr d-ix="1"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
+<tr d-ix="2"><td>043</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
-<pre><code>₇τ32₇⇩ṡF¬
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<pre><code>₇τCkQF¬
 </code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4oKHz4QzMuKCh+KHqeG5oUbCrCIsIiIsIjBcbjI3XG4zMlxuNTlcbjg3XG4xMjZcbjEyN1xuMTI4XG4zMDBcbjIyMDFcbjU3MzJcbjE1NzA2MTM3NFxuMTU3MDYxMzc1Il0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<h2>Explained</h2>
-<pre><code>₇τ32₇⇩ṡF¬­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁪‏‏​⁡⁠⁡‌⁢​‎‎⁪⁡⁪⁠⁪⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏‏​⁡⁠⁡‌⁣​‎‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌­
-₇τ         # ‎⁡Convert to base 128
-  32₇⇩ṡ    # ‎⁢Generate the range [32, 126 (₇⇩)]
-       F   # ‎⁣Remove all those values from the base 128 list
-        ¬  # ‎⁤Logically negate the result
-💎
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4oKHz4RDa1FGwqwiLCIiLCIwXG4yN1xuMzJcbjU5XG44N1xuMTI2XG4xMjdcbjEyOFxuMzAwXG4yMjAxXG41NzMyXG4xNTcwNjEzNzRcbjE1NzA2MTM3NSJd" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>I may have forgotten which thing did the fixed ascii</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<pre><code>bØ⁷ỌfƑØṖ
 </code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+<p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCJiw5jigbfhu4xmxpHDmOG5liIsIsOH4oKsIiwiIixbIlswLCAyNywgMzIsIDU5LCA4NywgMTI2LCAxMjcsIDEyOCwgMzAwLCAyMjAxLCA1NzMyLCAxNTcwNjEzNzQsIDE1NzA2MTM3NV0iXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
+<h2>Explanation</h2>
+<pre><code>bØ⁷ỌfƑØṖ    main link
+b           convert to base
+ Ø⁷         128
+   Ọ        convert to characters
+     Ƒ      check if the result is unchanged by
+    f       filtering to only include
+      ØṖ    printable ASCII
+</code></pre>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 43 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>f=lambda n:31&lt;n%128&lt;127and(n&lt;128)|f(n//128)
+</code></pre>
+<p><a href="https://tio.run/##Xc5LTsMwEIDhvU8xLJA8KG39IHUohQNwAZbIKI2IlE4sx10goQo4QVkiNnC1XiQ42dTpxhp/I41@9xpeWtJ9X901dvtcWqCVlmu6lKpYS2UslZziUOBbxWmxGKa@aj1QBldPUBNsreNd8PPONXXIoHUb4gJxxQCcrynwig8vIWIvYDa7h8o23Qb48fCOTJkp/SDTaqTgd6P8IstvErlFVpjk/4hMqmUC@wHOzv4NVkztYwzQ4izqM4tVSsipfh0P3zHETOKyMp7NjVhKba4Tf/AX@9MmTy/F1VDzDw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
 
 <table id="st">
