--- a/q/274209.html
+++ b/q/274209.html
@@ -26,25 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
-<tr d-ix="1"><td>044</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
-<tr d-ix="2"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
-<tr d-ix="3"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
-<tr d-ix="4"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
+<tr d-ix="1"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
+<tr d-ix="2"><td>044</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
+<tr d-ix="3"><td>054</td><td>Bash</td><td>240717T151013Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274214#274214">Themooni</a></td></tr>
+<tr d-ix="4"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
+<tr d-ix="5"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 39 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
+<p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
+<p>Returns <code>0</code> for <em>printable</em> or <code>true</code> for <em>non-printable</em>.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=n=&gt;-~n%128&lt;33||(n&gt;&gt;=7)&amp;&amp;f(n)
+</code></pre>
+<p><a href="https://tio.run/##ddBNC4IwHMfxe6/CDsUGlXtIZ5TSuTfQ2UqjkC3UOolU98COEUS9Nd/IeqBDurXzhx/7f9f@zk/m8WqTdrlYBFKGLne9bs5bmDgjSrMMcM9zGWy3Q8ChnAueiCjoRWIJQoCM74PQME0j9KMkMEBZ7GGjCgnTw2sdUlKBabz9uHvdWQONG9aVwzRqWleY2KrKVcW0JzxU6GjhQdOFIqS1x45SkCCsk@eyuChx2Dfj70GdhfJR2mcYI4wqk@OyuJXFaaZoiyEbU9b/HZ3EzfwftCqzL/luJZ8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 39 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n:32&lt;-~n%128and(n&lt;128)|f(n&gt;&gt;7)
 </code></pre>
 <p><a href="https://tio.run/##Xc7BSsQwEIDhe55iPAgZaZc0tZvuuvYBfAGPEukGC91pSONBkKI@wXoUL/pq@yI17cV0L2HyDQy/ffFPHeXjaG5bfXisNdA2l7t0oMtMlppqTrsw4KvhVFUKR9M5oASuHqAhOGjLe@9WvW0bn0Bn98QF4pYBWNeQ54ZPLyHiKCBNKzC67ffAT8c3ZFIt6RtZLmfy7nmWH2TFJpIbZKWK/vfIMrmOYJjg7OzvZOXS3ueAXJxFfSShSopsqZ@n41cIUYu4pA5nCyXWWa6uI79zF8P/pogvhdVU8wc" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <p>-4 bytes thanks to Themoonisacheese and squareroot12621</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 44 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 44 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>f=\(x)all(x%%128%%127&gt;31,if(y&lt;-x%/%128)f(y))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN3XSbGM0KjQTc3I0KlRVDY0sQIS5nbGhTmaaRqWNboWqPkhUE8jR1IToucWYl6ZhoKmgrKCra6eQlphTnKqg8WhCgyZXmoaROYb4bJC4sRFMvKSoFCy8ACRsaokqbA0StDBHFQwHCRoamaGK1kFEMe1bCJGwwJBohLrR2ADT8U06YNcbGRhiSE18NGEm2K3m6J7QSQFbZWxibmhoYIhuqMOjCfMeTehNAqsxNTcwMzQ2N0E1wKtIsQ5Z2hTNCKA8yD-QYIdFGQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 54 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 54 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>(($1%128&gt;31&amp;&amp;$1%128&lt;127))&amp;&amp;((($1&lt;128))||$0 $(($1&gt;&gt;7)))
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=TdGxbsMgEAZgdc1T3JAgGCLxg_HhKvK7pFWtSB0ytN38Gp26eEgeqn2aGi46POHTB4L_98_t5fxxWW6Tdfb-9Tkd82-ydo8DQh4jjJHPEwI7Z4wttg7ZuXmeaF_GcVzJyeG_p2-3e3u9XAnPu4k8zTPJSNd3gVAgsEpQiUViIGNEokpXJA0qnUoqklklqfRFEHqlXomF2htYKQtlUstqQ32fb6GGlegR19dYwaNF9noStY3Em3BojaBWgsS-R-SubWnVIG63pHZH6wi1JMSOAY9N86Us-TvLIus_" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -52,7 +61,7 @@
 ATO link assumes the function is named <code>f</code> because $0 doesn't work in ATO, but the penalty for hardcoding the script name would be a single byte, so the score would be the same.</p>
 <p>Turns out this is a port of <a href="https://codegolf.stackexchange.com/a/274211/88192">@Jitse's answer</a>, but i came up with it independently.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 7 bytes</h1>
 <pre><code>₇τCkQF¬
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwi4oKHz4RDa1FGwqwiLCIiLCIwXG4yN1xuMzJcbjU5XG44N1xuMTI2XG4xMjdcbjEyOFxuMzAwXG4yMjAxXG41NzMyXG4xNTcwNjEzNzRcbjE1NzA2MTM3NSJd" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -67,7 +76,7 @@ ATO link assumes the function is named <code>f</code> because $0 doesn't work in
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 8 bytes</h1>
 <pre><code>bØ⁷ỌfƑØṖ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCJiw5jigbfhu4xmxpHDmOG5liIsIsOH4oKsIiwiIixbIlswLCAyNywgMzIsIDU5LCA4NywgMTI2LCAxMjcsIDEyOCwgMzAwLCAyMjAxLCA1NzMyLCAxNTcwNjEzNzQsIDE1NzA2MTM3NV0iXV0=" rel="nofollow noreferrer">Try It Online!</a></p>
