--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240717T162439Z
+"   /golfscore                                      20240717T163200Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/97436.html">Alphabet Diamond                                : 0097436</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
 <a href="q/174142.html">Japanese pitch accent numbers                   : 0174142</a>
 <a href="q/64198.html">99 Bottles of Beer                              : 0064198</a>
