--- a/q/274209.html
+++ b/q/274209.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
+<tr d-ix="0"><td>010</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
 <tr d-ix="1"><td>030</td><td>JavaScript ES6</td><td>240717T160651Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274216#274216">Arnauld</a></td></tr>
 <tr d-ix="2"><td>039</td><td>Python 3</td><td>240717T141641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274211#274211">Jitse</a></td></tr>
 <tr d-ix="3"><td>044</td><td>R</td><td>240717T152918Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274215#274215">Dominic </a></td></tr>
@@ -34,10 +34,19 @@
 <tr d-ix="5"><td>007</td><td>Vyxal</td><td>240717T140602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274210#274210">lyxal</a></td></tr>
 <tr d-ix="6"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 9 bytes</h1>
-<pre><code>7W_YA6Y2m
+<div id="pu0" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 10 bytes</h1>
+<pre><code>7W_YA6Y2mA
 </code></pre>
-<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo97@9eklRaUlGpTpXrXpaYk5xpfp/U3NjIy4A" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYmxDkBAEAX79yPX7u65WyqR@ASJKIRrREHDKRS@/ZxGMZlJZg9xS3PSfhoaP8ieahOPK663wWOWsJ05xrZLBFFYgatQKlh85nMJS/kJMZzmz7ZQZmICOyXPVou/3As" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><a href="https://tio.run/##y00syfn/3zw8PtLRLNIo1/H/f1NzYyMuAA" rel="nofollow noreferrer">Try it online!</a> Or <a href="https://tio.run/##PYkxDoAwDMT2e00uaZsyVuIJSKgTsNON/4eyMFi25HE9d5zh@9Fb6TparFsI1GGKvKA6qGXyucJkPhUi@/y05KRQwOxSaJ7@yi8" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<h3>Explanation</h3>
+<pre><code>      % Implicit input
+7W    % 7, base-2 exponentiation: gives 128
+_YA   % Convert to base 128
+6Y2   % Push ASCII range (predefined literal): ' ':'~'
+m     % Ismembner? element-wise
+A     % All. Gives tru if all entries are true
+      % Implicit display
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>JavaScript (ES6), 30 bytes</h1>
 <p>Very similar to <a href="https://codegolf.stackexchange.com/a/274211/58563">Jitse's answer</a>.</p>
