--- a/q/274209.html
+++ b/q/274209.html
@@ -36,7 +36,7 @@
 <tr d-ix="7"><td>008</td><td>Jelly</td><td>240717T141820Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274212#274212">hyper-ne</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>APL+WIN, 36 bytes</h1>
-<p>Prompts for integer. Index origin=0.</p>
+<p>Prompts for integer. Index origin=0. 1=true, 0=false</p>
 <pre><code>(+/v∊32+⍳95)=⍴v←((⌈128⍟2⌈n)⍴128)⊤n←⎕
 </code></pre>
 <p><a href="https://tio.run/##SyzI0U2pTMzJT9dNzkksLs5M/v@ob6qvz6O2CcZcQJanP5BlwPWooz3tv4a2ftmjji5jI@1HvZstTTVtH/VuKQNKa2g86ukwNLJ41DvfCMjK0wSKA7maj7qW5AGlgab8B@rn@p/GZcAFwUbmQMLYCEiYWgIJCxDX0MgMTELYFiAFBmC1RgaGIIXmYPWGxibmhoYGhiAZQ1NzAzNDY3MTJLYpAA" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
