--- a/q/174142.html
+++ b/q/174142.html
@@ -54,6 +54,7 @@ v @s$1 =&gt; $1 v/$ I []* _
 class Y {ャ,ュ,ョ}
 class p {^,v}
 element syl @K @Y? @p? # a mora is a big kana with optional small kana. add ^,v so that it's considered part of the syllable
+# `syllable` wasn't used here because it ended up being really hard to implement using syllables, and trying to account for the unary numeral at the front.
 # use unary I for counting
 # no I for 0, one I for 1, etc.
 
